Fix TicketRestController
